--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "crypto": "^1.0.1",
     "express": "^4.17.3",
     "morgan": "^1.10.0",
     "swagger-ui-express": "^4.3.0",
